--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,20 @@
 <!doctype html>
+<head>
+    <meta charset="utf-8">
+    <title>React Starter</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
+</head>
+<body id="body">
+    <div id="content"></div>
+</body>
 
-<meta charset="utf-8">
-<title>React Starter</title>
-
-<div id="content"></div>
+<style>
+    body {
+        margin: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: #E9EBEE;
+    }
+</style>
 
 <script src="bundle.js"></script>
